Contracts small changes