@@ -1,18 +1,16 @@
-// CreditsController.java
 package org.example.finostra.Controllers.CreditCard;
 
 import org.example.finostra.Entity.Contract.Contract;
 import org.example.finostra.Entity.RequestsAndDTOs.Requests.CreditCard.AttachCreditRequest;
 import org.example.finostra.Entity.RequestsAndDTOs.Requests.CreditCard.CarForCreditRequest;
 import org.example.finostra.Services.Contract.ContractService;
+import org.example.finostra.Services.Contract.ContractService.ContractDto;
 import org.example.finostra.Services.User.CreditCard.CreditCardService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
-import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/creditCard")
@@ -30,38 +28,28 @@ public class CreditsController {
     @PostMapping("/attachCredit")
     public ResponseEntity<String> attachCredit(Authentication auth,
                                                @RequestBody AttachCreditRequest request) {
-
         String userPublicUUID = auth.getName();
-
         Contract contract = creditCardService.attachCredit(userPublicUUID, request);
-
-        return ResponseEntity.ok(contract.getBlobLink());
+        return ResponseEntity.ok(contractService.signUrl(contract.getBlobLink()));
     }
 
     @GetMapping("/fetchAllContracts")
     public ResponseEntity<UserContractResponse> fetchAllContracts(Authentication auth) {
-
         String userPublicUUID = auth.getName();
-        List<Contract> all = contractService.fetchAllContractsByUserPublicUUID(userPublicUUID);
-
-        UserContractResponse resp =
-                new UserContractResponse(all.stream()
-                        .map(Contract::getBlobLink)
-                        .collect(Collectors.toList()));
-
-        return ResponseEntity.ok(resp);
+        List<String> urls = contractService.fetchAllContractsByUserPublicUUID(userPublicUUID)
+                .stream()
+                .map(ContractDto::url)
+                .toList();
+        return ResponseEntity.ok(new UserContractResponse(urls));
     }
 
     @PostMapping("/carForCredit")
     public ResponseEntity<String> carForCredit(Authentication auth,
                                                @RequestBody CarForCreditRequest request) {
-
         String userPublicUUID = auth.getName();
         Contract contract = creditCardService.createCarCreditRequest(userPublicUUID, request);
-
-        return ResponseEntity.ok(contract.getBlobLink());
+        return ResponseEntity.ok(contractService.signUrl(contract.getBlobLink()));
     }
 
-
-    private record UserContractResponse(List<String> allContractsBlobLinks) {}
+    private record UserContractResponse(List<String> contracts) {}
 }
